fix: gs: wheels panel overflowing + minor changes

--- a/kalman_gs/node_project/src/components/panel-manager.module.css
+++ b/kalman_gs/node_project/src/components/panel-manager.module.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: stretch;
   align-items: stretch;
+  max-height: calc(100vh - 39px);
 }
 
 .layout-container {
